--- a/42_TNP2022.tex
+++ b/42_TNP2022.tex
@@ -93,7 +93,27 @@
 \end{center}
 \end{table}
 
-[ZA DUSANOV DEO]
+\subsection{TMRW Belgrade конференција}
+
+TMRW конференција је једна од највећих технолошких догађаја у успону у Европи која окупља преко 40000 учесника, како уживо тако и онлине, као и преко 100 говорника и презентатора. Главна тема ове конференције је истраживање најновијих трендова у областима вештачке интелигенције, блокчејна, криптовалута, НФТ -ја, метаверс-а и гејминга као и упознавање учесника са истим.  
+
+Београд је од 13. до 15. маја 2022. године био домаћин овог огромног догађаја. Церемонија отварања била је представљена као футуристички спетакл, уз специјалне ефекте, ласере и пиротехнику. Поред учења о развоју и “рударењу” криптовалута, постеиоци су имали прилику и да упознају људе који су креирали неке од најистакнутијих НФТ пројеката. TMRW 2022 конференција је окупила водеће светске блокчејн компаније и утицајне стручњаке. Присутни су такође имали шансу да упознају пионире Метаверс-а који су их едуковали о потенцијалу и утицају ове технологије на наше животе и свет какав познајемо. На конференцији је било више од 50 говорника и уводних излагања са бројним интерактивним дисусијама и радионицама. У табели \ref{tab:tabela2} су приказане статистике за TMRW Belgrade 2022, односно колико је било излагача, постеилаца и величина изложбеног простора.\cite{tmrw}
+
+\begin{table}[h!]
+\begin{center}
+\begin{tabular}{|ccc|}
+\hline
+\multicolumn{3}{|c|}{Статистике за TMRW конференцију}                                                                  \\ \hline
+\multicolumn{1}{|c|}{Број излагача} & \multicolumn{1}{c|}{Број посетилаца}          & Изложбени простор           \\ \hline
+\multicolumn{1}{|c|}{Преко 50}      & \multicolumn{1}{c|}{Преко 21000 уживо и онлине} & 2500м2 Belexpo centar \\ \hline
+\end{tabular}
+\caption{Statistika za TMRW Belgrade 2022}
+\label{tab:tabela2}
+\end{center}
+\end{table}
+ 
+\subsection{19. COMING IT конференција}
+Компанија COMING (Computer Engineering d.o.o.), један од лидера у ICT (Information and Communications) области у Србији и региону, је компанија која поставља за циљ креирање, развијање и пружање ИТ система и услуга. 25. октобра 2022. године организовали су своју 19. ИТ конференцију. Главна тема ове конференције је била усмерена ка размишљању на питање како ИТ функција може бити организована, а да се обезбеди фокус на главни бизнис и потребну агилност у пословању.\cite{comingit}
 
 \subsection{Data Science Conference 2022}
 DataScienceConference је интернационална AI и Data конференција у Београду која пружа најсавременије увиде у AI и Data Science. 2022. године је било преко 200 говора и 50 tech туторијала. 
